syntax = "proto3";

option java_package = "com.thopham.projects.dimohi.userservice.grpcentities";
option java_multiple_files = true;

message UserProtobuf {
    string id = 1;
    string phone = 2;
    string email = 3;
}

message RegisterUserParamsProtobuf {
    string phone = 1;
    string email = 2;
    string password = 3;
}

message RegisterUserResultProtobuf {
    UserProtobuf user = 1;
}

message LoginUserParamsProtobuf {
    string phone = 1;
    string password = 2;
}

message LoginUserResultProtobuf {
    UserProtobuf user = 1;
}

service UserService {
    rpc register(RegisterUserParamsProtobuf) returns (RegisterUserResultProtobuf) {}
    rpc login(LoginUserParamsProtobuf) returns (LoginUserResultProtobuf) {}
}